--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -48,8 +48,8 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-PoWeR"
-# CONFIG_LOCALVERSION_AUTO is not set
+# CONFIG_LOCALVERSION is not set
+CONFIG_LOCALVERSION_AUTO=y
 CONFIG_INLINE_OPTIMIZATION=y
 CONFIG_DEFAULT_HOSTNAME="Saikrishna1504"
 CONFIG_SWAP=y
