--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -209,14 +209,15 @@ jobs:
           arch: ${{ steps.generate-args.outputs.ARCH }}
         if: ${{ env.withKernelSU == 'true' && env.withSuSFS == 'true'}}
         run: |
-          curl -LSs "https://raw.githubusercontent.com/wodanesdag/KernelSU-Next/next-susfs-4.14/kernel/setup.sh" | bash -
+          curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash -s next
           KERNELSU_NEXT_VERSION=$(cd KernelSU-Next && expr $(/usr/bin/git rev-list --count HEAD) + 10200)
           echo -e "\n💡 KernelSU Next version: $KERNELSU_NEXT_VERSION\n"
           echo -e "KERNELSU_NEXT_VERSION=$KERNELSU_NEXT_VERSION" >> $GITHUB_OUTPUT
-
-          cd scripts
-          sed -i 's/ -dirty//g' setlocalversion
-          
+          cd KernelSU-Next
+          curl https://raw.githubusercontent.com/wodanesdag/susfs4ksu/refs/heads/next-4.14/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch -o susfs.patch
+          patch -p1 < susfs.patch
+          cd ../scripts
+          sed -i 's/ -dirty//g' setlocalversion          
 
       - name: "👍 Make defconfig"
         working-directory: ${{ env.KERNEL_NAME }}
